# px4_gazebo_project

./: .gitignore  CMakeLists.txt  display.py  image_node.cpp  offboard_node.cpp  package.xml  sensor_node.cpp  setup.py  voxel_filter
px4_control/: mediapipe_node.py
src/: display.py  image_node.cpp  offboard_node.cpp  open3d_convert.py  voxelgrid.cpp
